# GraphicsForGames-BaseProject

./: .gitignore  README.md
BaseProject/BaseProjectSolution/: BaseProjectSolution.sln
BaseProject/BaseProjectSolution/BaseProject/: BaseProject.vcxproj  BaseProject.vcxproj.filters  Mesh.cpp  Mesh.h  Mesh.hpp  hello-3d-world.cpp
BaseProject/BaseProjectSolution/BaseProject/Debug/: vc142.idb
BaseProject/BaseProjectSolution/BaseProject/Debug/BaseProject.tlog/: BaseProject.lastbuildstate
BaseProject/BaseProjectSolution/BaseProject/mgl/: Crab.cpp  Entity.cpp  Mesh.cpp  Mesh.hpp  MeshManager.cpp  MeshManager.hpp  mglConventions.hpp  mglShader.cpp
Examples/intro-shaders/: basic-final-vs.glsl  basic-projection-vs.glsl  basic-vs2fsparams-fs.glsl  basic-vsparams-vs.glsl  shaders.cpp
Examples/mesh-loader/mesh-loader/: mesh-loader.cpp
Examples/mesh-loader/mgl/: mglCamera.hpp  mglMesh.hpp
Examples/textures-samplers/: mglTexture.hpp
Exercises/MathChallenge/: CMakeLists.txt  main.cpp
Exercises/Tangram/: CMakeLists.txt
Exercises/Tangram/hello-2d-world/: hello-2d-world.cpp
ShaderProjectJoao/ShaderProjectJoaoSolution/: ShaderProjectJoaoSolution.sln
ShaderProjectJoao/ShaderProjectJoaoSolution/ShaderProjectJoao/: ShaderProjectJoao.vcxproj  ShaderProjectJoao.vcxproj.filters  basic-dynamic-vs.glsl  basic-fsparams-vs.glsl  basic-minimum-vs.glsl  basic-ncolor-fs.glsl  basic-ncolor-vs.glsl  basic-vs2fsparams-vs.glsl  color-fs.glsl  color-vs.glsl  hello-3d-world.cpp  marblewithphong-fs.glsl  marblewithphong-vs.glsl
ShaderProjectJoao/ShaderProjectJoaoSolution/ShaderProjectJoao/mgl/: Crab.hpp  Cube.cpp  Cube.hpp  Entity.cpp  Entity.hpp  Mesh.cpp  Mesh.hpp  MeshManager.cpp  MeshManager.hpp  Sphere.cpp  Sphere.hpp  mglConventions.hpp  mglTexture.cpp
ShaderProjectJoao/ShaderProjectJoaoSolution/dependencies/soil/lib/: soil2-debug.lib
ShaderProjectJoao/ShaderProjectJoaoSolution/dependencies/stb/: png.h  pngwriter.h
ShaderProjectRafael/BaseProjectSolution/: CMakeLists.txt
ShaderProjectRafael/BaseProjectSolution/BaseProject/: BaseProject.vcxproj  BaseProject.vcxproj.filters  color-fs.glsl  color-vs.glsl  hello-3d-world.cpp
ShaderProjectRafael/BaseProjectSolution/BaseProject/mgl/: Crab.cpp  Crab.hpp  Entity.cpp  Entity.hpp  Mesh.cpp  Mesh.hpp  MeshManager.cpp  MeshManager.hpp  Planets.cpp  Planets.hpp  TextureGenerator.cpp  TextureGenerator.hpp  mglConventions.hpp
Tangram/TangramSolution/: TangramSolution.sln
Tangram/TangramSolution/Tangram/: Entity.cpp  Entity.h  Tangram.vcxproj  Tangram.vcxproj.filters  hello-2d-world.cpp
Tangram/TangramSolution/Tangram/mgl/: mgl.hpp  mglApp.cpp
